<resources>
    <string name="app_name">Biblioteca</string>
    <string name="ra">Registro acadêmico (RA)</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="data_retirada">Data de retirada</string>
    <string name="data_devolucao">Data de devolução</string>
    <string name="codigo">Código de exemplar</string>
    <string name="qtd_paginas">Quantidade de páginas</string>
    <string name="isbn">ISBN</string>
    <string name="edicao">Edição</string>
    <string name="issn">ISSN</string>
    <string name="aluno">Aluno</string>
    <string name="aluguel">Aluguel</string>
    <string name="livro">Livro</string>
    <string name="revista">Revista</string>
    <string name="inserir">Inserir</string>
    <string name="modificar">Modificar</string>
    <string name="excluir">Excluir</string>
    <string name="buscar">Buscar</string>
    <string name="listar">Listar</string>
    <string name="inicio">Biblioteca FATEC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>