<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_revista"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RevistaFragment">

    <TextView
        android:id="@+id/tvTituloRevista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/revista"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCodigoRevista"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/etPaginasRevista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTituloRevista" />

    <Button
        android:id="@+id/btnBuscarRevista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="23dp"
        android:text="@string/buscar"
        app:layout_constraintBottom_toTopOf="@+id/etNomeRevista"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etNomeRevista"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="@+id/etPaginasRevista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etCodigoRevista" />

    <EditText
        android:id="@+id/etPaginasRevista"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="261dp"
        android:ems="10"
        android:hint="@string/qtd_paginas"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etISSNRevista"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/issn"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/btnInserirRevista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPaginasRevista" />

    <Button
        android:id="@+id/btnInserirRevista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:text="@string/inserir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPaginasRevista" />

    <Button
        android:id="@+id/btnModificarRevista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="@+id/etISSNRevista"
        app:layout_constraintTop_toBottomOf="@+id/etISSNRevista" />

    <Button
        android:id="@+id/btnExcluirRevista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirRevista" />

    <Button
        android:id="@+id/btnListarRevista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="33dp"
        android:text="@string/listar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarRevista" />

    <TextView
        android:id="@+id/tvListarRevista"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="22dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExcluirRevista" />
</androidx.constraintlayout.widget.ConstraintLayout>