<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_aluno"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlunoFragment">

    <EditText
        android:id="@+id/etRAAluno"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="73dp"
        android:ems="10"
        android:hint="@string/ra"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="@+id/etNomeAluno"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarAluno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvtTituloAluno" />

    <EditText
        android:id="@+id/etNomeAluno"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/etEmailAluno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarAluno" />

    <EditText
        android:id="@+id/etEmailAluno"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBuscarAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="29dp"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etRAAluno"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInserirAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="44dp"
        android:text="@string/inserir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailAluno" />

    <Button
        android:id="@+id/btnModificarAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="29dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailAluno" />

    <Button
        android:id="@+id/btnExcluirAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="39dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirAluno" />

    <Button
        android:id="@+id/btnListarAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="29dp"
        android:text="@string/listar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarAluno" />

    <TextView
        android:id="@+id/tvtTituloAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/aluno"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvListarAluno"
        android:layout_width="381dp"
        android:layout_height="200dp"
        android:scrollbars="vertical"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>