<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_aluguel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AluguelFragment">

    <TextView
        android:id="@+id/tvTituloAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/aluguel"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spAlunoAluguel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/spExemplarAluguel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloAluguel" />

    <Spinner
        android:id="@+id/spExemplarAluguel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="142dp"
        app:layout_constraintBottom_toBottomOf="@+id/etDtDevolucaoAluguel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTituloAluguel" />

    <EditText
        android:id="@+id/etDtRetiradaAluguel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/data_retirada"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/etDtDevolucaoAluguel"
        app:layout_constraintStart_toStartOf="@+id/etDtDevolucaoAluguel" />

    <EditText
        android:id="@+id/etDtDevolucaoAluguel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:hint="@string/data_devolucao"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarAluguel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBuscarAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="9dp"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etDtDevolucaoAluguel"
        app:layout_constraintTop_toTopOf="@+id/etDtRetiradaAluguel" />

    <Button
        android:id="@+id/btnInserirALuguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/inserir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDtDevolucaoAluguel" />

    <Button
        android:id="@+id/btnModificarAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="36dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDtDevolucaoAluguel" />

    <Button
        android:id="@+id/btnExcluirAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="22dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirALuguel" />

    <Button
        android:id="@+id/btnListarAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="38dp"
        android:text="@string/listar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarAluguel" />

    <TextView
        android:id="@+id/tvListarAluguel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="16dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListarAluguel" />
</androidx.constraintlayout.widget.ConstraintLayout>